Fixed text align for small and large screen

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -41,7 +41,7 @@ header {
 
 #zen-summary, #zen-preamble {
     max-width: 800px;
-    justify-self: center;
+    // justify-self: center;
 }
 
 div.supporting > *:not(footer) {
